--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 CLOUDINARY_CLOUD_NAME=dwlrjobyp
 CLOUDINARY_API_KEY=158176898246352
 CLOUDINARY_API_SECRET=Z-XTFej3d1hGfutd-utV0agy7qs
-MONGODB_URI=mongodb+srv://newaz:newaz@cluster0.p0ykuap.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=3000
+MONGODB_URI=mongodb://localhost:27017/details-db
